[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://CapsuleHead.tscn" type="PackedScene" id=4]
[ext_resource path="res://space.jpg" type="Texture" id=5]
[ext_resource path="res://Floating.tscn" type="PackedScene" id=6]
[ext_resource path="res://4.tscn" type="PackedScene" id=7]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://SpaceCube.tscn" type="PackedScene" id=9]
[ext_resource path="res://EyeSore.tscn" type="PackedScene" id=10]
[ext_resource path="res://Wedge.tscn" type="PackedScene" id=11]
[ext_resource path="res://Earf.tscn" type="PackedScene" id=12]

[sub_resource type="PanoramaSky" id=1]

radiance_size = 4
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0.0793457, 0.116491, 0.195313, 1 )
background_energy = 0.49
background_canvas_max_layer = 0
ambient_light_color = Color( 0.726563, 0.725232, 0.692505, 1 )
ambient_light_energy = 0.76
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = true
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Background" ]

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Platform" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14, 0, 0 )

[node name="Wall" parent="Platform" index="1" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.9063, 1.38637, 0 )

[node name="Wall2" parent="Platform" index="2" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -29.8384, 1.16401, 0.326369 )

[node name="Wall3" parent="Platform" index="3" instance=ExtResource( 3 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0.161631, 1.16401, -28.6736 )
_sections_unfolded = [ "Transform" ]

[node name="Wall4" parent="Platform" index="4" instance=ExtResource( 3 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0.161631, 1.16401, 29.3264 )
_sections_unfolded = [ "Transform" ]

[node name="KinematicBody" parent="." index="1" instance=ExtResource( 4 )]

transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, -24, 2.85319, -6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]

environment = SubResource( 2 )

[node name="Floating" parent="." index="3" instance=ExtResource( 6 )]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 12.4562, 17 )

[node name="Ramp" parent="Floating" index="1" instance=ExtResource( 7 )]

transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, -22, 18, 0 )

[node name="Portal" parent="Floating" index="2" instance=ExtResource( 8 )]

transform = Transform( -2.18557e-007, 0, -5, 0, 5, 0, 5, 0, -2.18557e-007, 25, 6, 0 )

[node name="SpaceCube" parent="." index="4" instance=ExtResource( 9 )]

transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 1, 4, -21 )

[node name="EyeSore" parent="." index="5" instance=ExtResource( 10 )]

transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 27, 20, 42 )
_sections_unfolded = [ "Transform" ]

[node name="Wedge" parent="." index="6" instance=ExtResource( 11 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 33.1995, 17.2616 )

[node name="Earf" parent="." index="7" instance=ExtResource( 12 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 5, 2 )
mass = 100.0

[connection signal="body_entered" from="SpaceCube" to="." method="_on_SpaceCube_body_entered"]


